--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,11 +5,15 @@ services:
     ports:
       - 3306:3306
     environment:
-      - MYSQL_DATABASE=gorm
+      - MYSQL_DATABASE=user
       - MYSQL_USER=gorm
       - MYSQL_PASSWORD=gorm
-      - MYSQL_RANDOM_ROOT_PASSWORD="yes"
+      - MYSQL_ROOT_PASSWORD=jyz020911
   redis:
     image: 'redis:latest'
     ports:
       - 6379:6379
+  consul:
+    image: 'consul:1.15.4'
+    ports:
+      - 8500:8500
